Fix layout bug

--- a/assets/src/block-editor/blocks/recent-posts/style.css
+++ b/assets/src/block-editor/blocks/recent-posts/style.css
@@ -1,11 +1,13 @@
 .masonry-grid {
 	display: flex;
-	margin-left: -30px; /* gutter size offset */
+	padding: 24px;
+	padding: var(--mdc-layout-grid-margin-desktop, 24px);
 	width: auto;
 }
 
 .masonry-grid_column {
-	padding-left: 30px; /* gutter size */
+	padding-left: 24px;
+	padding-left: var(--mdc-layout-grid-margin-desktop, 24px);
 	background-clip: padding-box;
 
 	&:first-child {
@@ -36,7 +38,8 @@
 }
 
 .masonry-grid_column > div {
-	margin-bottom: 20px;
+	margin-bottom: 24px;
+	margin-bottom: var(--mdc-layout-grid-margin-desktop, 24px);
 }
 
 /* @todo: Will need refactoring. */
